# Pheromind-RAG

./: .embedrc.example  .gitignore  .npmignore  2  BRUTAL_REVIEW_VERDICT.md  CHANGELOG.md  CLAUDE.md  CLAUDE_FLOW_HOOK_RESTORATION_GUIDE.md  COMPREHENSIVE_TEST_REPORT.md  CONFIGURATION.md  Cargo.toml  Cargo.toml.cleaned  Cargo.toml.full  Cargo.toml.minimal  DEPENDENCIES.md  FINAL_ASSESSMENT_REPORT.md  FINAL_SETUP_SUMMARY.md  GTM_STRATEGY_609_AGENTS.md  IMPLEMENTATION_PROMPT.md  LICENSE  MCP_SERVER_SUMMARY.md  MCP_SETUP_GUIDE.md  MEMORY_SAFETY_VALIDATION_SUMMARY.md  MIGRATION_GUIDE.md  MISSION_COMPLETE_TRUTH_REPORT.md  NPM_GLOBAL_INSTALLATION_PLAN.md  PHASE2_VERIFICATION.md  QUICK-FIX.md  README.md  README_HONEST.md  SEARCH_ADAPTER_IMPLEMENTATION.md  SYSTEM_VALIDATION.md  TANTIVY_SEARCH_VERIFICATION_REPORT.md  UNBIASED_SYSTEM_REPORT.md  UNIFIED_SEARCHER_ADAPTER_MIGRATION_SUMMARY.md  auto_fix_hooks.sh  build.rs  complete_hook_restoration.sh  config.toml.example  debug_bm25.rs  (+40 more)
.claude/: batch_aa  batch_ab  batch_ac  batch_ad  files_to_fix.txt
.embed/: config.toml.example
.github/: dependabot.yml
.serena/: project.yml
.tantivy_index/: .managed.json  meta.json
benches/: line_tracking_bench.rs
config/: mcp-config.toml.template  mcp-minimal.toml.template  mcp-production.toml.template
docs/: 00_MASTER_PLAN_OVERVIEW.md  01_CONTENT_DETECTION_FEATURE.md  02_SPECIALIZED_EMBEDDING_MODELS.md  03_LANCEDB_VECTOR_STORAGE.md  04_GIT_FILE_WATCHING.md  05_MCP_SERVER_IMPLEMENTATION.md  AGENT_RELIABILITY_ASSESSMENT.md  API_CONSISTENCY_FIXES.md  ARCHITECT_SUMMARY.md  BM25_Implementation.md  BM25_TEST_REPORT.md  BOUNDED_GGUF_READER_IMPLEMENTATION.md  BRUTAL_FINAL_ASSESSMENT.md  BRUTAL_FINAL_ASSESSMENT_REPORT.md  BUILD_CONFIGURATION.md  BUILD_INSTRUCTIONS.md  BUILD_OPTIMIZATION.md  CLAUDE-FLOW-MCP-SOLUTION-SUCCESS.md  CLAUDE-FLOW-MCP-WINDOWS-SOLUTION.md  CLAUDE_CODE_MCP_SETUP.md  CLAUDE_FLOW_MASTERY_GUIDE.md  CODE_QUALITY_ANALYSIS_REPORT.md  COMPLETE-CLAUDE-FLOW-MCP-INTEGRATION.md  COMPLETE-NPX-FIX-STEPS.md  COMPLETION_RECOMMENDATIONS.md  COMPONENT_STATUS_MATRIX.md  COMPREHENSIVE_ANALYSIS_REPORT.md  COMPREHENSIVE_STRESS_TESTING_IMPLEMENTATION.md  CONFIGURATION_FIXES.md  CURRENT_STATE_SUMMARY.md  DEPENDENCY_ANALYSIS_REPORT.md  EDGE_CASES_ANALYSIS.md  EDGE_CASE_TESTING_STRATEGY.md  END_TO_END_PIPELINE_VALIDATION_REPORT.md  EXTERNAL_PROCESS_ARCHITECTURE.md  FINAL_BRUTAL_TRUTH_ASSESSMENT.md  FINAL_SYSTEM_STATUS.md  FINAL_SYSTEM_STATUS_REPORT.md  FINAL_VERIFICATION_REPORT.md  FINAL_VERIFICATION_TRUTHFUL_ASSESSMENT.md  (+113 more)
examples/: basic_search.rs  check_gpu.rs  chunker_bench.rs  test_chunker.rs  (+11 more)
tests/: COMPARATIVE_BM25_VERIFICATION_REPORT.md  Cargo.toml  README.md  ast_parser_missing_stress_tests.rs  ast_parser_stress_tests.rs  ast_stress_demo.rs  ast_stress_validation.rs  attention_fix_validation.rs  attention_mask_effectiveness.rs  baseline_verification.rs  bm25_bug_report.md  bm25_comprehensive_tests.rs  bm25_fix_verification.rs  bm25_functionality_validation.rs  bm25_idf_verification_1_mathematical.rs  bm25_idf_verification_2_edge_cases.rs  bm25_idf_verification_3_comparative.rs  bm25_idf_verification_4_search_ranking.rs  bm25_idf_verification_5_regression.rs  bm25_integration_tests.rs  bm25_isolation_test.rs  bm25_missing_stress_tests.rs  bm25_stress_test_runner.rs  bm25_stress_tests.rs  brutal_integration_validation.rs  brutal_validation_test.rs  chunker_integration_tests.rs  chunking_integration_test.rs  chunking_validation_tests.rs  compile_time_feature_tests.rs  component_boundary_tests.rs  comprehensive_bm25_idf_tests.rs  comprehensive_embedding_validation.rs  comprehensive_error_handling_tests.rs  comprehensive_functional_tests.rs  comprehensive_integration_tests.rs  comprehensive_search_functionality_validation.rs  comprehensive_search_test.py  comprehensive_search_tests.rs  comprehensive_stress_tests.rs  (+162 more)
tests/fixtures/: reference_embeddings.rs  semantic_similarity_benchmarks.rs  test_config.toml
tests/integration/: comprehensive_stress_validation.rs  v8_crash_prevention.rs
tests/memory_safety/: memory_monitor_extension.rs
tests/orchestration/: mod.rs  test_orchestrator.rs
tests/search_validation/: FINAL_VALIDATION_SUMMARY.md  ast_symbol_test.rs  comprehensive_test_runner.rs  ripgrep_test.rs  run_tests.rs  tantivy_test.rs  validation_report.md  vector_embedding_test.rs
tests/stress_test_environment/: STRESS_TEST_SPECIFICATION.md
tests/stress_test_environment/documentation/api_docs/: SPECIFICATION.md
tests/stress_test_environment/documentation/technical_specs/: SPECIFICATION.md
tests/stress_test_environment/documentation_samples/: malformed_markdown.md  massive_table.md  nested_code_blocks.md  reference_heavy.md  unicode_chaos.md
tests/stress_test_environment/edge_case_content/: binary_data_disguised.txt  encoding_nightmare.txt  zero_width_chaos.txt
tests/stress_test_environment/polyglot_code_samples/: async_go.go  complex_rust.rs  exotic_haskell.hs  functional_scala.scala  macro_heavy_c.c  metaprogramming_ruby.rb  nested_python.py  obfuscated_javascript.js  reflection_java.java  template_cpp.cpp
tests/stress_test_environment/programming_languages/cpp/: FILE_SPECIFICATION.md
tests/stress_test_environment/programming_languages/go/: FILE_SPECIFICATION.md
tests/stress_test_environment/programming_languages/haskell/: FILE_SPECIFICATION.md
tests/stress_test_environment/programming_languages/java/: FILE_SPECIFICATION.md
tests/stress_test_environment/programming_languages/javascript/: FILE_SPECIFICATION.md
tests/stress_test_environment/programming_languages/kotlin/: FILE_SPECIFICATION.md
tests/stress_test_environment/programming_languages/python/: FILE_SPECIFICATION.md
tests/stress_test_environment/programming_languages/rust/: FILE_SPECIFICATION.md
tests/stress_test_environment/programming_languages/scala/: FILE_SPECIFICATION.md
tests/stress_test_environment/programming_languages/typescript/: FILE_SPECIFICATION.md
tests/stress_test_framework/: ast_stress.rs  bm25_stress.rs  embedding_stress.rs  mod.rs  tantivy_stress.rs  test_utilities.rs  validation.rs
(+1218 files in other folders)
