[package]
name = "embed-search"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
tokio = { version = "1.43", features = ["full"] }
clap = { version = "4.4", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
regex = "1.11"

# Core dependencies
once_cell = "1.19"
parking_lot = "0.12"
lru = "0.12"
sha2 = "0.10"
rustc-hash = "1.1"
rayon = "1.8"

# Text processing
rust-stemmers = "1.2"
unicode-normalization = "0.1"
unicode-segmentation = "1.10"

# File watching
notify = "6.1"
notify-debouncer-mini = "0.4"
ignore = "0.4"
walkdir = "2.4"

# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# System monitoring
sysinfo = "0.30"

# Retry logic
backoff = "0.4"

# Additional dependencies
async-trait = "0.1"
log = "0.4"
env_logger = "0.10"
bincode = "1.3"
config = "0.14"

# Windows API (for Windows-specific features)
[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["fileapi", "handleapi", "winbase", "sysinfoapi"] }

