[package]
name = "embed-search"
version = "0.2.0"
edition = "2021"

[dependencies]
# Core dependencies
anyhow = "1.0"
thiserror = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
clap = { version = "4.0", features = ["derive"] }

# Real ML stack with correct crate names
fastembed = "5"           # Correct crate name (not fastembed-rs)
lancedb = "0.8"           # Latest stable version
tantivy = "0.22"          # Full-text search
tree-sitter = "0.22"      # AST parsing

# Tree-sitter language parsers
tree-sitter-rust = "0.21"
tree-sitter-python = "0.21"
tree-sitter-javascript = "0.21"

# Arrow for LanceDB integration (required dependency)
arrow = "52"
arrow-array = "52"
arrow-schema = "52"

# Performance and utilities
rustc-hash = "2.0"        # Fast hashing for BM25
parking_lot = "0.12"      # Better synchronization primitives

# Text processing for BM25
rust-stemmers = "1.2"
unicode-normalization = "0.1"
unicode-segmentation = "1.10"

# Simple utilities
walkdir = "2.4"
ignore = "0.4"
regex = "1.11"
backoff = "0.4"           # For retry logic
lru = "0.12"             # LRU cache
log = "0.4"              # Logging
futures-util = "0.3"     # For stream utilities

# System information (Windows)
[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["sysinfoapi", "memoryapi"] }

# Config
toml = "0.8"

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4.5", features = ["derive"] }
walkdir = "2.5"
env_logger = "0.11"

[dev-dependencies]
tempfile = "3.8"

[features]
default = ["vectordb", "tree-sitter"]
vectordb = []
tree-sitter = []

[[bin]]
name = "embed-search"
path = "src/main.rs"

[[bin]]
name = "embed-search-mcp"
path = "src/bin/mcp_server.rs"

[[bin]]
name = "verify_embeddings"
path = "verify_embeddings.rs"

[[bin]]
name = "embed"
path = "src/bin/embed_cli.rs"