[package]
name = "embed-search"
version = "0.3.0"
edition = "2021"
build = "build.rs"

[dependencies]
# Core dependencies ONLY
anyhow = "1.0"
thiserror = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# llama-cpp-2 bindings for GGUF support
llama-cpp-2 = "0.1.54"
llama-cpp-sys-2 = "0.1.54"

# Minimal utilities
num_cpus = "1.16"
parking_lot = "0.12"
once_cell = "1.19"
lru = "0.12"
walkdir = "2.5"
ignore = "0.4"  # For gitignore support
regex = "1.10"
tantivy = "0.22"
rustc-hash = "2.1"
rust-stemmers = "1.2"
unicode-normalization = "0.1"
backoff = "0.4"
tree-sitter = "0.20"
tree-sitter-rust = "0.20"
tree-sitter-python = "0.20"
tree-sitter-javascript = "0.20"
# tree-sitter-markdown = "0.7"  # Disabled to avoid version conflicts
unicode-segmentation = "1.12"
# lancedb = "0.6" # DISABLED due to arrow-arith chrono quarter() bug
# Using simple in-memory vector store for CPU-only system
futures-util = "0.3"
log = "0.4"
tokio = { version = "1.0", features = ["time", "rt", "rt-multi-thread", "macros", "sync"] }
clap = { version = "4.0", features = ["derive"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing = "0.1"

# For config (if needed)
toml = "0.8"
tempfile = "3.20.0"
env_logger = "0.11"
[build-dependencies]
cc = "1.0"
cmake = "0.1"


[features]
# CPU-ONLY configuration - NO GPU features
default = ["cpu-optimized"]
cpu-optimized = []

[[bin]]
name = "test_phase2"
path = "src/bin/test_phase2.rs"

[[bin]]
name = "test_ffi"
path = "src/bin/test_ffi.rs"

[[bin]]
name = "test_markdown"
path = "tests/test_markdown_chunker.rs"
