[package]
name = "embed-memory-safety-tests"
version = "0.1.0"
edition = "2021"
authors = ["Memory Safety Team"]
description = "Comprehensive memory safety validation tests for GGUF streaming reader"

[dependencies]
# Core dependencies
embed = { path = ".." }
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"

# Testing framework
criterion = { version = "0.5", features = ["html_reports"] }

# Memory monitoring and system info
sysinfo = "0.30"

# JSON serialization for reports
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Machine learning dependencies (conditional)
candle-core = { version = "0.6", optional = true }

# Additional utilities
lru = "0.12"

[dev-dependencies]
tempfile = "3.0"
pretty_assertions = "1.4"

[features]
default = ["ml"]
ml = ["candle-core", "embed/ml"]
no-ml = []

[[bin]]
name = "memory_safety_test_runner"
path = "memory_safety_test_runner.rs"

[[bin]]
name = "run_benchmarks" 
path = "performance/benchmark_runner.rs"

[[bin]]
name = "v8_crash_tester"
path = "integration/v8_crash_tester.rs"

# Benchmark targets
[[bench]]
name = "gguf_memory_benchmarks"
harness = false
path = "benches/gguf_memory_benchmarks.rs"

[[bench]]
name = "streaming_performance"
harness = false
path = "benches/streaming_performance.rs"

# Test configuration
[profile.test]
opt-level = 1
debug = true

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

# Memory safety specific settings
[profile.test.package."*"]
overflow-checks = true
debug-assertions = true